--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "builds": [
-    { "src": "vite.config.*", "use": "@vercel/static-build" }
-  ],
+  "framework": "vite",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "routes": [
     { "src": "/(.*)", "dest": "/index.html" }
   ]
